Fixed Footer Problem on Mobile

--- a/partials/_contact.scss
+++ b/partials/_contact.scss
@@ -1,7 +1,7 @@
 /*---------------------- CONTACTO-------------------*/
 
 .contact {  
-    height: 70vh;
+    height: 100vh;
     top: -1vh;
     z-index: -1;
     display: flex;
